update submodule URL to use https

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/K4zuki/pandocker-base.git
 [submodule "pandocker"]
 	path = pandocker
-	url = git@github.com:K4zuki/pandocker.git
+	url = https://github.com/K4zuki/pandocker.git
