--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,6 @@ jobs:
       - run:
           name: Make PDF
           command: make initdir pdf
+
+      - run:
+          ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME `git rev-parse --short HEAD` Out/
