update CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,5 @@ jobs:
           command: make initdir pdf
 
       - run:
-          ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME `git rev-parse --short HEAD` Out/
+          name: Deploy
+          command: ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME `git rev-parse --short HEAD` Out/
