update CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
       - run:
           name: Deploy preparation
-          command: ghr --version; ls Out;git rev-parse --short HEAD;
+          command: mkdir deploy; mv Out/*.html deploy/; mv Out/*.pdf deploy/
       - run:
           name: Deploy
-          command: ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME revision-0.0.1 Out/TARGET.pdf 
+          command: ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME `git rev-parse --short HEAD` deploy/
