update tag naming rule

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,4 @@ jobs:
           command: mkdir deploy; mv Out/*.html deploy/; mv Out/*.pdf deploy/
       - run:
           name: Deploy
-          command: ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME `git rev-parse --short HEAD` deploy/
+          command: ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME build-`date +%Y%b%d`-`git rev-parse --short HEAD` deploy/
