--- a/markdown/config.yaml
+++ b/markdown/config.yaml
@@ -1,6 +1,6 @@
 ---
 title: 私的Markdown-PDF変換環境を紹介する本 ２
-abstract: DockerイメージでOSを気にしないでよくなるはずがやっぱりだめだった件
+abstract: "Welcome to ようこそ\\LaTeX の沼 きょうもどったんばったんおおさわぎ"
 circle: KY技研
 author: "@_K4ZUKI_"
 comiket: C93
