add pandocker-filters submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pandocker-alpine"]
 	path = pandocker-alpine
 	url = https://github.com/pandocker/pandocker-alpine.git
+[submodule "pandocker-filters"]
+	path = pandocker-filters
+	url = git@github.com:K4zuki/pandocker-filters.git
