update CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: get submodule
+          name: get submodules
           command: git submodule update --init
       - run:
           name: Make HTML
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Prepare QR code for this build
           command: |
-            pip install qrcode
+            pip3 install qrcode
             qr https://github.com/pandocker/pandocker-docs/releases/download/build-`git rev-parse --short HEAD`/Pandocker-Docs-`git rev-parse --short HEAD`.pdf > images/QRcode.png
       - run:
           name: Make PDF
