--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - run:
           name: Prepare QR code for this build
           command: |
+            make initdir
             pip3 install qrcode
             qr https://github.com/pandocker/pandocker-docs/releases/download/build-`git rev-parse --short HEAD`/Pandocker-Docs-`git rev-parse --short HEAD`.pdf > images/QRcode.png
       - run:
