--- a/markdown/config.yaml
+++ b/markdown/config.yaml
@@ -1,6 +1,6 @@
 ---
 title: 私的Markdown-PDF変換環境を紹介する本 ３
-abstract: "総集編かもしれないけれど最終章にはまだ早い（？）"
+abstract: "総集編"
 circle: KY技研
 author: "@_K4ZUKI_"
 comiket: 技術書典４
