--- a/markdown/config.yaml
+++ b/markdown/config.yaml
@@ -1,9 +1,9 @@
 ---
-title: 私的Markdown-PDF変換環境を紹介する本 ３
-abstract: "総集編"
+title: 私的Markdown-PDF変換環境を紹介する本 ４
+abstract: "Windows・DOCX特集編"
 circle: KY技研
 author: "@_K4ZUKI_"
-comiket: 技術書典４
+comiket: C95 2日目
 year: 2018
 publisher: キンコーズオンラインで印刷製本 秋葉原店で受取り
 docrevision: "1.0"
