--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,13 @@ jobs:
         name: get submodules
         command: git submodule update --init
     - run:
+        name: Prepare ghr
+        command: |
+          cd build
+          wget -c https://github.com/tcnksm/ghr/releases/download/v0.5.4/ghr_v0.5.4_linux_amd64.zip
+          unzip -e ghr_v0.5.4_linux_amd64.zip
+          cp ./ghr /usr/local/bin
+    - run:
         name: Prepare QR code for this build
         command: |
           make initdir
