--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
     - run:
         name: Prepare ghr
         command: |
+          mkdir build
           cd build
           wget -c https://github.com/tcnksm/ghr/releases/download/v0.5.4/ghr_v0.5.4_linux_amd64.zip
           unzip -e ghr_v0.5.4_linux_amd64.zip
