--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,43 +2,43 @@ version: 2
 jobs:
   build:
     docker:
-    - image: k4zuki/pandocker
+      - image: k4zuki/pandocker-alpine
     steps:
-    - checkout
-    - run:
-        name: get submodules
-        command: git submodule update --init
-    - run:
-        name: Prepare ghr
-        command: |
-          mkdir build
-          cd build
-          wget -c https://github.com/tcnksm/ghr/releases/download/v0.5.4/ghr_v0.5.4_linux_amd64.zip
-          unzip -e ghr_v0.5.4_linux_amd64.zip
-          cp ./ghr /usr/local/bin
-    - run:
-        name: Prepare QR code for this build
-        command: |
-          make initdir
-          pip3 install qrcode
-          qr https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/build-`date +%b-%d-%Y`-`git rev-parse --short HEAD`/Pandocker-Docs-`git rev-parse --short HEAD`.pdf > images/QRcode.png
-    - run:
-        name: Make HTML
-        command: make initdir html
-    - run:
-        name: Make PDF
-        command: make initdir pdf
-    - run:
-        name: Make DOCX
-        command: make initdir docx
-    - run:
-        name: Deploy preparation
-        command: |
-          mkdir deploy
-          mv Out/*.html deploy/
-          mv Out/*.pdf deploy/
-          mv Out/*.docx deploy/
-    - run:
-        name: Deploy
-        command: |
-          ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME build-`date +%b-%d-%Y`-`git rev-parse --short HEAD` deploy/
+      - checkout
+      - run:
+          name: get submodules
+          command: git submodule update --init
+      - run:
+          name: Prepare ghr
+          command: |
+            mkdir build
+            cd build
+            wget -c https://github.com/tcnksm/ghr/releases/download/v0.5.4/ghr_v0.5.4_linux_amd64.zip
+            unzip -e ghr_v0.5.4_linux_amd64.zip
+            cp ./ghr /usr/local/bin
+      - run:
+          name: Prepare QR code for this build
+          command: |
+            make initdir
+            pip3 install qrcode
+            qr https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/build-`date +%b-%d-%Y`-`git rev-parse --short HEAD`/Pandocker-Docs-`git rev-parse --short HEAD`.pdf > images/QRcode.png
+      - run:
+          name: Make HTML
+          command: make initdir html
+      - run:
+          name: Make PDF
+          command: make initdir pdf
+      - run:
+          name: Make DOCX
+          command: make initdir docx
+      - run:
+          name: Deploy preparation
+          command: |
+            mkdir deploy
+            mv Out/*.html deploy/
+            mv Out/*.pdf deploy/
+            mv Out/*.docx deploy/
+      - run:
+          name: Deploy
+          command: |
+            ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME build-`date +%b-%d-%Y`-`git rev-parse --short HEAD` deploy/
