--- a/markdown/config.yaml
+++ b/markdown/config.yaml
@@ -1,15 +1,15 @@
 ---
-title: 私的Markdown-PDF変換環境を紹介する本 ５
-abstract: "Luaフィルタ書いてみた/Pandocker-Alpine復活させてみた"
+title: Pandocと**Luaフィルタ**で爆速ドキュメント環境を作る本
+abstract: "「私的Markdown-PDF変換環境を紹介するシリーズ」 Vol.５"
 circle: KY技研
 author: "@_K4ZUKI_"
 comiket: C96
 year: 2019
 publisher: キンコーズオンラインで印刷製本 秋葉原店で受取り
-docrevision: "1.0"
+docrevision: "**$1.0$**"
 front: images/markdown-logo-1664x1024.png
 # download from: https://github.com/dcurtis/markdown-mark
-verbcolored: true
+verbcolored: false
 rmnote: true
 secnumdepth: 3
 
