--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
           command: |
             mkdir build
             cd build
-            wget -c https://github.com/tcnksm/ghr/releases/download/v0.12.2/ghr_v0.12.2_linux_amd64.tar.gz
-            tar zxf ghr_v0.12.2_linux_amd64.tar.gz
+            wget -c https://github.com/tcnksm/ghr/releases/download/v0.5.4/ghr_v0.5.4_linux_amd64.zip
+            unzip ghr_v0.5.4_linux_amd64.zip
             cp ./ghr /usr/local/bin
       - run:
           name: Prepare QR code for this build
