ci config update challenge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs:
             URL=https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/
             DATE=`date +%Y-%m%b-%d`
             BUILD=build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE
-            SHORT_HASH=${CIRCLECI_SHA1:0:7}
-            echo $URL/$BUILD/Pandocker-Docs-$SHORT_HASH.pdf
-            qr https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-`date %Y-+%b-%d`/Pandocker-Docs-${CIRCLECI_SHA1:0:7}.pdf > images/QRcode.png
+            SHORT_HASH=${CIRCLE_SHA1:0:7}
+            echo $URL/$BUILD/Pandocker-Docs-$CIRCLE_BRANCH-$SHORT_HASH.pdf
+            qr https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-`date %Y-+%b-%d`/Pandocker-Docs-${CIRCLE_SHA1:0:7}.pdf > images/QRcode.png
       - run:
           name: Make HTML
           command: make initdir html BRANCH=$CIRCLE_BRANCH
@@ -47,6 +47,6 @@ jobs:
           name: Deploy
           command: |
             BUILD=build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE
-            SHORT_HASH=${CIRCLECI_SHA1:0:7}
+            SHORT_HASH=${CIRCLE_SHA1:0:7}
             ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME \
             -r $CIRCLE_PROJECT_REPONAME $BUILD-$SHORT_HASH deploy/
