--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2
-environment:
-  SHORT_HASH: $CIRCLE_SHA1:0:7
-  DATE: `date +%Y-%m%b-%d`
-  BUILD: build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE-$SHORT_HASH
 jobs:
   build:
+    environment:
+      DATE: `date +%Y-%m%b-%d`
+      BUILD: build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE-$SHORT_HASH
+    #      SHORT_HASH: $CIRCLE_SHA1:0:7
     docker:
       - image: k4zuki/pandocker-alpine
     steps:
