ci config challenge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,25 +3,23 @@ jobs:
   build:
     docker:
       - image: k4zuki/pandocker-alpine
-    #    environment:
     steps:
       - checkout
+      #
       - run:
           name: 環境変数の設定
           command: |
             echo "export DATE=`date +%Y-%m%b-%d`" >> $BASH_ENV
-            echo "export BUILD=build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE-$SHORT_HASH" >> $BASH_ENV
             echo "export SHORT_HASH=${CIRCLE_SHA1:0:7}" >> $BASH_ENV
-            echo "export PATH=$GOPATH/bin:$PATH" >> $BASH_ENV
-            echo "export GIT_SHA1=$CIRCLE_SHA1" >> $BASH_ENV
+            echo "export BUILD=build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE-$SHORT_HASH" >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: env variables
           command: |
-            echo "$BASH_ENV=" $BASH_ENV
-            echo "$SHORT_HASH=" $SHORT_HASH
-            echo "$DATE=" $DATE
-            echo "$BUILD=" $BUILD
+            echo "SHORT_HASH=" $SHORT_HASH
+            echo "DATE=" $DATE
+            echo "BUILD=" $BUILD
+      #
       - run:
           name: get submodules
           command: git submodule update --init; echo $DATE
@@ -46,18 +44,18 @@ jobs:
       - run:
           name: Make HTML
           command: |
-            SHORT_HASH=${CIRCLE_SHA1:0:7}
-            make initdir html BRANCH=$CIRCLE_BRANCH HASH=$SHORT_HASH
+            #            SHORT_HASH=${CIRCLE_SHA1:0:7}
+                     make initdir html BRANCH=$CIRCLE_BRANCH HASH=$SHORT_HASH
       - run:
           name: Make PDF
           command: |
-            SHORT_HASH=${CIRCLE_SHA1:0:7}
-            make initdir pdf BRANCH=$CIRCLE_BRANCH HASH=$SHORT_HASH
+            #            SHORT_HASH=${CIRCLE_SHA1:0:7}
+                     make initdir pdf BRANCH=$CIRCLE_BRANCH HASH=$SHORT_HASH
       - run:
           name: Make DOCX
           command: |
-            SHORT_HASH=${CIRCLE_SHA1:0:7}
-            make initdir docx BRANCH=$CIRCLE_BRANCH HASH=$SHORT_HASH
+            #            SHORT_HASH=${CIRCLE_SHA1:0:7}
+                     make initdir docx BRANCH=$CIRCLE_BRANCH HASH=$SHORT_HASH
       - run:
           name: Deploy preparation
           command: |
@@ -68,7 +66,7 @@ jobs:
       - run:
           name: Deploy
           command: |
-            DATE=`date +%Y-%m%b-%d`
-            SHORT_HASH=${CIRCLE_SHA1:0:7}
-            BUILD=build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE-$SHORT_HASH
-            ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME $BUILD deploy/
+            #            DATE=`date +%Y-%m%b-%d`
+            #            SHORT_HASH=${CIRCLE_SHA1:0:7}
+            #            BUILD=build-$CIRCLE_BUILD_NUM-$CIRCLE_BRANCH-$DATE-$SHORT_HASH
+                     ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME $BUILD deploy/
