start writing for C97
plotting

--- a/markdown/config.yaml
+++ b/markdown/config.yaml
@@ -1,9 +1,9 @@
 ---
-title: Pandocと**Luaフィルタ**で爆速ドキュメント環境を作る本
-abstract: "「私的Markdown-PDF変換環境を紹介するシリーズ」 Vol.５"
+title: "Pandocker入門"
+abstract: "「私的Markdown-PDF変換環境を紹介するシリーズ」 Vol.６（総集編２）"
 circle: KY技研
 author: "@_K4ZUKI_"
-comiket: C96
+comiket: C97
 year: 2019
 publisher: キンコーズオンラインで印刷製本 秋葉原店で受取り
 docrevision: "**$1.0$**"
