--- a/markdown/config.yaml
+++ b/markdown/config.yaml
@@ -13,6 +13,30 @@ verbcolored: true
 rmnote: true
 secnumdepth: 3
 
+svgbob:
+  font-family: "Source Code Pro"
+  font-size: 14
+  scale: 1
+  strike-width: 2
+
+heading-unnumbered:
+  1: "Heading Unnumbered 1"
+  2: "Heading Unnumbered 2"
+  3: "Heading Unnumbered 3"
+  4: "Heading Unnumbered 4"
+
+bullet-style:
+  1: "Bullet List 1"
+  2: "Bullet List 2"
+  3: "Bullet List 3"
+
+numbered-bullets:
+  1: "Number Bullet"
+  2: "Number Bullet 2"
+  3: "Number Bullet 3"
+
+image-div-style: "Image Caption"
+
 docx_coreprop:
   author: "@_K4ZUKI_" # str
   #  category: "Category" # str
